# sweater

./: CMakeLists.txt  LICENSE  README.md  sweater.cmake
.github/workflows/: gh-actions.yml
include/boost/: sweater.hpp
include/boost/detail/: android.hpp  apple.hpp  generic.hpp  openmp.hpp  windows.hpp
include/boost/sweater/: hardware_concurrency.hpp  spread_chunked.cpp  spread_chunked.hpp  sweater.hpp
include/boost/sweater/detail/: android.hpp  apple.hpp  generic.hpp  openmp.hpp  single_threaded.hpp  windows.hpp
include/boost/sweater/impls/: apple.hpp  generic.cpp  generic.hpp  generic_config.hpp  openmp.hpp  single_threaded.hpp  windows.hpp
include/boost/sweater/queues/: mpmc_moodycamel.hpp
include/boost/sweater/threading/: barrier.cpp  barrier.hpp  condvar.hpp  futex.hpp  futex_barrier.cpp  futex_barrier.hpp  futex_semaphore.cpp  generic_barrier.cpp  generic_barrier.hpp  generic_semaphore.cpp  hardware_concurrency.cpp  hardware_concurrency.hpp  mutex.hpp  rw_lock.hpp  rw_mutex.hpp  semaphore.cpp  semaphore.hpp  thread.hpp
include/boost/sweater/threading/cpp/: spin_lock.cpp  spin_lock.hpp
include/boost/sweater/threading/emscripten/: futex.cpp
include/boost/sweater/threading/linux/: futex.cpp  semaphore.cpp  semaphore.hpp
include/boost/sweater/threading/posix/: condvar.hpp  mutex.hpp  rw_lock.hpp  rw_mutex.hpp  semaphore.hpp  thread.cpp  thread.hpp
include/boost/sweater/threading/windows/: condvar.hpp  futex.cpp  mutex.hpp  rw_lock.hpp  rw_mutex.hpp  thread.hpp
include/psi/sweater/: dispatch_tracking.hpp  spread_chunked.cpp  spread_chunked.hpp  sweater.hpp
include/psi/sweater/detail/: config.hpp
include/psi/sweater/impls/: apple.hpp  generic.cpp  generic.hpp  generic_config.hpp  libuv.hpp  openmp.hpp  single_threaded.hpp  windows.hpp
include/psi/sweater/queues/: mpmc_moodycamel.hpp
include/psi/sweater/threading/: barrier.hpp  condvar.hpp  futex.hpp  futex_barrier.cpp  futex_barrier.hpp  futex_rw_mutex.hpp  futex_semaphore.cpp  generic_barrier.cpp  generic_barrier.hpp  generic_semaphore.cpp  hardware_concurrency.cpp  hardware_concurrency.hpp  mutex.hpp  read_recursion_registry.hpp  rrw_mutex.hpp  rw_mutex.hpp  rw_preference.hpp  semaphore.hpp  thread.hpp
include/psi/sweater/threading/apple/: futex.cpp
include/psi/sweater/threading/cpp/: spin_lock.cpp  spin_lock.hpp
include/psi/sweater/threading/emscripten/: futex.cpp
include/psi/sweater/threading/linux/: futex.cpp
include/psi/sweater/threading/posix/: condvar.hpp  mutex.hpp  rw_mutex.hpp  semaphore.hpp  thread.cpp  thread.hpp
include/psi/sweater/threading/windows/: condvar.hpp  futex.cpp  mutex.hpp  rw_mutex.hpp  thread.hpp
test/: CMakeLists.txt  futex_rw_mutex_test.cpp  futex_test.cpp  libuv_test.cpp  mutex_test_traits.hpp  rrw_mutex_test.cpp  rw_mutex_contract_test.cpp  rw_mutex_test.cpp  rw_preference_test.cpp  smoke_test.cpp  sweat_shop_stress_test.cpp
